--- a/frontend/src/components/Formulario/Formulario.css
+++ b/frontend/src/components/Formulario/Formulario.css
@@ -18,3 +18,25 @@
     font-size: 28px;
     text-align: center;
 }
+
+.btn {
+    border: none;
+    padding: 10px 30px;
+    background-color: rgba(77, 1, 77);;
+    border-radius: 6px;
+    font-size: 18px;
+    margin-top: 20px;
+    color: #FFF;
+    font-weight: 700;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+}
+
+.btn:hover {
+    background-color: #FFF;
+    color: rgba(77, 1, 77);
+    cursor: pointer;
+}
